@@ -1980,6 +1980,9 @@ Release 0.23.5 - UNRELEASED
 
     HDFS-3990.  NN's health report has severe performance problems (daryn)
 
+    HDFS-4181.  LeaseManager tries to double remove and prints extra messages
+    (Kihwal Lee via daryn)
+
   BUG FIXES
 
     HDFS-3829. TestHftpURLTimeouts fails intermittently with JDK7  (Trevor
